Fixed the `Controls` panel styling and icons and alignment. Added two more value controls to control staffs and BPM. Lots of major refactoring and plumbing. 🦃

--- a/src/components/Controls.css
+++ b/src/components/Controls.css
@@ -1,9 +1,15 @@
 .Controls {
-  background-color: green;
-  height: 100vh;
+  background-color: var(--background);
+  border: 1pt solid var(--gray);
+  height: 100%;
+  width: 80px;
   padding: 3rem 1rem;
+  display: flex;
+  flex-flow: column wrap;
+  margin-bottom: 1rem;
+  color: var(--yellow);
 }
 
-.ControlsContainer {
-  margin-bottom: 1rem;
+.ControlsMenu {
+  margin: inherit;
 }
